# plyvel

./: .gitignore  .gitmodules  MANIFEST.in  README.rst  local_dev_osx.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: cibuildwheel.yml  test.yml
scripts/: install-leveldb-osx.sh  install-leveldb-windows.ps1  install-leveldb.ps1  install-snappy-osx.sh  install-snappy-windows.ps1  install-snappy.ps1
src/plyvel/: _plyvel.pyx
test/: test_plyvel.py
