[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[build-system.macos]
requires = ["delocate"]

[dev.tools]
requires = ["black", "isort"]