[metadata]
name = plyvel
description = Plyvel, a fast and feature-rich Python interface to LevelDB
long_description = file: README.rst
url = https://github.com/wbolster/plyvel
version = 1.3.0
author = Wouter Bolsterlee
author_email = wouter@bolsterl.ee
license = BSD License
license_files = LICENSE.rst
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: Windows
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Database
    Topic :: Database :: Database Engines/Servers
    Topic :: Software Development :: Libraries :: Python Modules
keywords = plyvel, leveldb

[options]
package_dir =
    = src
packages = find:
install_requires = 
python_requires = >=2.7, >=3.7

[options.packages.find]
where = src

[options.extras_require]
dev = 
    check-manifes
test = 
    coverage
    
[build_sphinx]
source-dir = doc/
build-dir = doc/build/

[tool:pytest]
addopts = -sv